# remote-raw-viewer

./: .env.production.template  .gitignore  CLAUDE.md  DEPLOYMENT_REPORT.md  DEVELOPMENT.md  README.md  SSH_SETUP_COMPLETE.md  docker-compose.prod.yml  install-uv.sh  pyproject.toml  quick-start.sh  setup-test-server-fixed.sh  start-dev.sh  test-agent.sh
agent/: requirements.txt
agent/src/: file_manager.py  image_processor.py  main.py
agent/tests/: test_file_manager.py  test_image_processor.py  test_main.py
backend/: .env.example  Dockerfile.prod  jest.config.js  package-lock.json  package.json
backend/src/: index.ts
backend/tests/: app.test.ts  setup.ts
dev-report/: BUGFIX_REPORT.md  STARTUP_GUIDE.md  UV_SETUP.md  uv-test-report.md
doc/: ComprehensiveTestReport.md  ImageModalImprovementReport.md  ImplementationPlan.md  OperationalReadiness.md  ProductionDeploymentGuide.md  QuickStartGuide.md  Requirements Specification.md  ThumbnailImprovementReport.md  ToastNotificationImprovementReport.md  UserManual.md
docker/: agent.Dockerfile  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
frontend/: Dockerfile.prod  PRODUCTION_CHECKLIST.md  index.html  jest.config.js  nginx.prod.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useToast.ts  (+4 more)
frontend/tests/: App.test.tsx  jest-setup.js
scripts/: check-status.sh  deploy-production.sh  install.sh  setup-ssl.sh  setup-test-server.sh  setup_environment.py  start-backend.sh  start-dev.sh  start-frontend.sh  start_development.py  stop-dev.sh
(+44 files in other folders)
